# TaskManager

./: .coveralls.yml  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_date_of_change_and_more.py  0004_user_date_of_birth_user_phone.py  0005_user_avatar_picture.py
main/models/: tag.py  task.py  user.py
task_manager/: settings.py  urls.py
task_manager/services/: mail.py
test/: base_test_class.py  factories.py  test_admin.py  test_jwt_auth.py  test_send_mail.py  test_tag.py  test_task.py  test_user.py
