[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["dbp"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.2"
psycopg2-binary = "^2.9.4"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
Markdown = "^3.4.1"
drf-yasg = "^1.21.4"
factory-boy = "^3.2.1"
drf-writable-nested = "^0.7.0"
djangorestframework-simplejwt = "^5.2.2"
freezegun = "^1.2.2"
rollbar = "^0.16.3"
newrelic = "^8.5.0"
coveralls = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"